--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,14 +2,13 @@
 
 .sidebar {
   width: 180px;
-  background-color: #6674bb !important;
+  background-color: #181b22 !important;
   color: #fff;
   height: 100vh;
   position: fixed;
   top: 0;
   left: 0;
   overflow-y: none;
-  border-right: 1px solid #bfbfbf;
 }
 
 .sidebar ul {
@@ -18,7 +17,8 @@
   justify-content: space-between !important;
 }
 .sidebar ul li:hover {
-  background-color: #aab4e9 !important;
+  background-color: #292e38 !important;
+
   cursor: pointer;
 }
 
@@ -50,13 +50,17 @@ a {
   transition: margin-left 0.4s;
   background-color: #e5eaff !important;
 }
+.contents {
+  padding-left: 20px;
+  padding-right: 20px;
+}
 
 .links {
   margin-top: 25%;
   margin-left: 1%;
 }
 .settings {
-  margin-top: 64%;
+  margin-top: 40%;
 }
 .logo {
   font-family: "Brush Script MT", cursive;
@@ -98,7 +102,7 @@ svg {
   display: flex;
   justify-content: space-between;
   background-color: #fff !important;
-  box-shadow: 0px 0px 0px 0px #6674bb;
+  box-shadow: 0px 0px 0px 0px #181b22;
 }
 .search-input {
   border: 1px solid #c7d3ff;
@@ -137,20 +141,20 @@ svg {
 .card-title .add-button {
   color: #fff;
   font-weight: 500;
-  background-color: #6674bb !important;
+  background-color: #181b22 !important;
 }
 .card-title .add-button:hover {
-  background-color: #aab4e9 !important;
+  background-color: #292e38 !important;
   color: #fff;
 }
 .btn-add {
   color: #fff !important;
 
-  background-color: #6674bb !important;
+  background-color: #181b22 !important;
 }
 .btn-add:hover {
   color: #fff !important;
-  background-color: #aab4e9 !important;
+  background-color: #292e38 !important;
 }
 .lease-overview ul {
   list-style: none !important;
